# apogeum-finder

./: CMakeLists.txt  README.md  cyclic_tab_test.cpp  stdio_apogeum_finder_test.cpp
h_generator/: generated_data.in  h_generator.cpp
spiejs_systiemo/: apogeum_finder.h  cyclic_que.h  generated_data.in  noise_filter.h  params.h  stdio_apogeum_finder_test.cpp
